fix: details icon collapse (#19)

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -95,6 +95,7 @@
           grid-row: span 10;
           max-width: 230px;
           min-width: 230px;
+          margin-right: 10px;
         }
       }
     }
@@ -137,15 +138,16 @@
         align-items: center;
         flex-direction: row-reverse;
         &::before {
-          content: "/203A";
+          content: "\203A";
           font-size: 25px;
           margin-left: auto;
           margin-right: unset;
           line-height: 1;
         }
       }
-      &.open > summary {
+      &[open] > summary {
         &::before {
+          content: "\203A";
           transform: rotate(90deg);
         }
       }
